fix: スクロール設定を修正し、overflowをoverflow-yに変更

--- a/src/css/pilot-status.css
+++ b/src/css/pilot-status.css
@@ -3,7 +3,7 @@
   font-size: calc(var(--responsive-font-size) * 0.8);
   width: 50vw;
   box-sizing: border-box;
-  overflow: scroll;
+  overflow-y: scroll;
   height: calc(var(--responsive-font-size) * 8);
   padding: calc(var(--responsive-font-size) * 0.5);
   background-color: rgb(10 10 10 / 70%);
